@@ -7,10 +7,11 @@ package io.jooby.internal.apt;
 
 import static io.jooby.internal.apt.AnnotationSupport.*;
 import static io.jooby.internal.apt.CodeBlock.*;
-import static java.lang.System.lineSeparator;
+import static java.lang.System.*;
 import static java.util.Optional.ofNullable;
 
 import java.util.*;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -31,6 +32,9 @@ public class MvcRoute {
   private final boolean suspendFun;
   private boolean uncheckedCast;
   private final boolean hasBeanValidation;
+  private final Set<String> pending = new HashSet<>();
+  private boolean isTrpc = false;
+  private HttpMethod resolvedTrpcMethod = null;
 
   public MvcRoute(MvcContext context, MvcRouter router, ExecutableElement method) {
     this.context = context;
@@ -72,7 +76,6 @@ public class MvcRoute {
           .findFirst()
           .orElse(null);
     }
-    // look inside the method annotation
     var httpMethod = annotationMap.values().iterator().next();
     var projection = AnnotationSupport.findAnnotationValue(httpMethod, "projection"::equals);
     return projection.stream().findFirst().orElse(null);
@@ -86,7 +89,6 @@ public class MvcRoute {
     if (isProjection) {
       return true;
     }
-    // look inside the method annotation
     var httpMethod = annotationMap.values().iterator().next();
     var projection = AnnotationSupport.findAnnotationValue(httpMethod, "projection"::equals);
     return !projection.isEmpty();
@@ -138,45 +140,62 @@ public class MvcRoute {
                 + context.generateRouterName(router.getTargetType().getSimpleName().toString())
                 + "::"
             : "this::";
+
     for (var e : entries) {
       var lastHttpMethod = lastRoute && entries.get(entries.size() - 1).equals(e);
       var annotation = e.getKey();
       var httpMethod = HttpMethod.findByAnnotationName(annotation.getQualifiedName().toString());
+      var dslMethod = annotation.getSimpleName().toString().toLowerCase();
       var paths = context.path(router.getTargetType(), method, annotation);
+      var targetMethod = methodName;
+
+      if (httpMethod == HttpMethod.tRPC) {
+        resolvedTrpcMethod = trpcMethod(method);
+        if (resolvedTrpcMethod == null) {
+          throw new IllegalArgumentException(
+              "tRPC method not found: "
+                  + method.getSimpleName()
+                  + "() in "
+                  + router.getTargetType());
+        }
+        dslMethod = resolvedTrpcMethod.name().toLowerCase();
+        paths = List.of(trpcPath(method));
+        targetMethod =
+            "trpc" + targetMethod.substring(0, 1).toUpperCase() + targetMethod.substring(1);
+        this.isTrpc = true;
+      }
+
+      pending.add(targetMethod);
+
       for (var path : paths) {
-        var lastLine = lastHttpMethod && paths.get(paths.size() - 1).equals(path);
+        var lastLine = lastHttpMethod && paths.getLast().equals(path);
         block.add(javadocLink);
         block.add(
             statement(
                 isSuspendFun() ? "" : "app.",
-                annotation.getSimpleName().toString().toLowerCase(),
+                dslMethod,
                 "(",
                 string(leadingSlash(path)),
                 ", ",
                 context.pipeline(
-                    getReturnTypeHandler(), methodReference(kt, thisRef, methodName))));
+                    getReturnTypeHandler(), methodReference(kt, thisRef, targetMethod))));
         if (context.nonBlocking(getReturnTypeHandler()) || isSuspendFun()) {
           block.add(statement(indent(2), ".setNonBlocking(true)"));
         }
-        /* consumes */
         mediaType(httpMethod::consumes)
             .ifPresent(consumes -> block.add(statement(indent(2), ".setConsumes(", consumes, ")")));
-        /* produces */
         mediaType(httpMethod::produces)
             .ifPresent(produces -> block.add(statement(indent(2), ".setProduces(", produces, ")")));
-        /* dispatch */
         dispatch()
             .ifPresent(
                 dispatch ->
                     block.add(statement(indent(2), ".setExecutorKey(", string(dispatch), ")")));
-        /* attributes */
         attributeGenerator
             .toSourceCode(kt, this, 2)
             .ifPresent(
                 attributes -> block.add(statement(indent(2), ".setAttributes(", attributes, ")")));
         var lineSep = lastLine ? lineSeparator() : lineSeparator() + lineSeparator();
         if (context.generateMvcMethod()) {
-          /* mvcMethod */
           block.add(
               CodeBlock.of(
                   indent(2),
@@ -218,12 +237,6 @@ public class MvcRoute {
     return thisRef + methodName + ")";
   }
 
-  /**
-   * Ensure path start with a <code>/</code>(leading slash).
-   *
-   * @param path Path to process.
-   * @return Path with leading slash.
-   */
   static String leadingSlash(String path) {
     if (path == null || path.isEmpty() || path.equals("/")) {
       return "/";
@@ -233,30 +246,402 @@ public class MvcRoute {
 
   public List<String> generateHandlerCall(boolean kt) {
     var buffer = new ArrayList<String>();
-    /* Parameters */
-    var paramList = new StringJoiner(", ", "(", ")");
-    for (var parameter : getParameters(true)) {
-      String generatedParameter = parameter.generateMapping(kt);
-      if (parameter.isRequireBeanValidation()) {
-        generatedParameter =
-            CodeBlock.of(
-                "io.jooby.validation.BeanValidator.apply(", "ctx, ", generatedParameter, ")");
+    var methodName =
+        isTrpc
+            ? "trpc"
+                + getGeneratedName().substring(0, 1).toUpperCase()
+                + getGeneratedName().substring(1)
+            : getGeneratedName();
+
+    if (pending.contains(methodName)) {
+      var paramList = new StringJoiner(", ", "(", ")");
+      var returnTypeGenerics =
+          getReturnType().getArgumentsString(kt, false, Set.of(TypeKind.TYPEVAR));
+      var returnTypeString = type(kt, getReturnType().toString());
+      var customReturnType = getReturnType();
+
+      if (customReturnType.isProjection()) {
+        returnTypeGenerics = "";
+        returnTypeString = Types.PROJECTED + "<" + returnType + ">";
       }
 
-      paramList.add(generatedParameter);
-    }
-    var throwsException = !method.getThrownTypes().isEmpty();
-    var returnTypeGenerics =
-        getReturnType().getArgumentsString(kt, false, Set.of(TypeKind.TYPEVAR));
-    var returnTypeString = type(kt, getReturnType().toString());
-    var customReturnType = getReturnType();
-    if (customReturnType.isProjection()) {
-      // Override for projection
-      returnTypeGenerics = "";
-      returnTypeString = Types.PROJECTED + "<" + returnType + ">";
-    }
+      var reactive = isTrpc ? context.getReactiveType(returnType.getRawType()) : null;
+      var isReactiveVoid = false;
+      var innerReactiveType = "Object";
 
-    boolean nullable = false;
+      // 1. Resolve Target Signature
+      var methodReturnTypeString = returnTypeString;
+      if (isTrpc) {
+        if (reactive != null) {
+          var rawReactiveType = type(kt, returnType.getRawType().toString());
+          if (!returnType.getArguments().isEmpty()) {
+            innerReactiveType = type(kt, returnType.getArguments().get(0).getRawType().toString());
+            if (innerReactiveType.equals("java.lang.Void") || innerReactiveType.equals("Void")) {
+              isReactiveVoid = true;
+              innerReactiveType = kt ? "Unit" : "Void";
+            }
+          } else if (rawReactiveType.contains("Completable")) {
+            isReactiveVoid = true;
+            innerReactiveType = kt ? "Unit" : "Void";
+          }
+          methodReturnTypeString =
+              rawReactiveType + "<io.jooby.trpc.TrpcResponse<" + innerReactiveType + ">>";
+        } else {
+          methodReturnTypeString =
+              "io.jooby.trpc.TrpcResponse<"
+                  + (returnType.isVoid() ? (kt ? "Unit" : "Void") : returnTypeString)
+                  + ">";
+        }
+      }
+
+      var nullable =
+          methodCallHeader(
+              kt,
+              "ctx",
+              methodName,
+              buffer,
+              returnTypeGenerics,
+              methodReturnTypeString,
+              isTrpc || !method.getThrownTypes().isEmpty());
+
+      int controllerIndent = 2;
+
+      if (isTrpc && !parameters.isEmpty()) {
+        controllerIndent = 4;
+        buffer.add(
+            statement(
+                indent(2),
+                var(kt),
+                "parser = ctx.require(io.jooby.trpc.TrpcParser",
+                clazz(kt),
+                ")",
+                semicolon(kt)));
+
+        // Calculate actual tRPC payload parameters (ignore Context and Coroutines)
+        long trpcPayloadCount =
+            parameters.stream()
+                .filter(
+                    p -> {
+                      String type = p.getType().getRawType().toString();
+                      return !type.equals("io.jooby.Context")
+                          && !p.getType().is("kotlin.coroutines.Continuation");
+                    })
+                .count();
+        boolean isTuple = trpcPayloadCount > 1;
+
+        if (resolvedTrpcMethod == HttpMethod.GET) {
+          buffer.add(
+              statement(
+                  indent(2),
+                  var(kt),
+                  "input = ctx.query(",
+                  string("input"),
+                  ").value()",
+                  semicolon(kt)));
+
+          if (isTuple) { // <-- Use calculated isTuple
+            if (kt) {
+              buffer.add(
+                  statement(
+                      indent(2),
+                      "if (input?.trim()?.let { it.startsWith('[') && it.endsWith(']') } != true)"
+                          + " throw IllegalArgumentException(",
+                      string("tRPC input for multiple arguments must be a JSON array (tuple)"),
+                      ")"));
+            } else {
+              buffer.add(
+                  statement(
+                      indent(2),
+                      "if (input == null || input.length() < 2 || input.charAt(0) != '[' ||"
+                          + " input.charAt(input.length() - 1) != ']') throw new"
+                          + " IllegalArgumentException(",
+                      string("tRPC input for multiple arguments must be a JSON array (tuple)"),
+                      ");"));
+            }
+          }
+        } else {
+          buffer.add(statement(indent(2), var(kt), "input = ctx.body().bytes()", semicolon(kt)));
+
+          if (isTuple) { // <-- Use calculated isTuple
+            if (kt) {
+              buffer.add(
+                  statement(
+                      indent(2),
+                      "if (input.size < 2 || input[0] != '['.code.toByte() || input[input.size - 1]"
+                          + " != ']'.code.toByte()) throw IllegalArgumentException(",
+                      string("tRPC body for multiple arguments must be a JSON array (tuple)"),
+                      ")"));
+            } else {
+              buffer.add(
+                  statement(
+                      indent(2),
+                      "if (input.length < 2 || input[0] != '[' || input[input.length - 1] != ']')"
+                          + " throw new IllegalArgumentException(",
+                      string("tRPC body for multiple arguments must be a JSON array (tuple)"),
+                      ");"));
+            }
+          }
+        }
+
+        if (kt) {
+          buffer.add(
+              statement(
+                  indent(2),
+                  "parser.reader(input, ",
+                  String.valueOf(isTuple),
+                  ").use { reader -> "));
+        } else {
+          buffer.add(
+              statement(
+                  indent(2),
+                  "try (var reader = parser.reader(input, ",
+                  String.valueOf(isTuple),
+                  ")) {"));
+        }
+
+        buffer.addAll(generateTrpcParameter(kt, paramList::add));
+      } else if (!isTrpc) {
+        for (var parameter : getParameters(true)) {
+          String generatedParameter = parameter.generateMapping(kt);
+          if (parameter.isRequireBeanValidation()) {
+            generatedParameter =
+                CodeBlock.of(
+                    "io.jooby.validation.BeanValidator.apply(", "ctx, ", generatedParameter, ")");
+          }
+          paramList.add(generatedParameter);
+        }
+      }
+
+      controllerVar(kt, buffer, controllerIndent);
+
+      // 2. Resolve Return Flow
+      if (returnType.isVoid()) {
+        String statusCode =
+            annotationMap.size() == 1
+                    && annotationMap
+                        .keySet()
+                        .iterator()
+                        .next()
+                        .getSimpleName()
+                        .toString()
+                        .equals("DELETE")
+                ? "NO_CONTENT"
+                : "OK";
+
+        if (annotationMap.size() == 1) {
+          buffer.add(
+              statement(
+                  indent(controllerIndent),
+                  "ctx.setResponseCode(io.jooby.StatusCode.",
+                  statusCode,
+                  ")",
+                  semicolon(kt)));
+        } else {
+          if (kt) {
+            buffer.add(
+                statement(
+                    indent(controllerIndent),
+                    "ctx.setResponseCode(if (ctx.getRoute().getMethod().equals(",
+                    string("DELETE"),
+                    ")) io.jooby.StatusCode.NO_CONTENT else io.jooby.StatusCode.OK)"));
+          } else {
+            buffer.add(
+                statement(
+                    indent(controllerIndent),
+                    "ctx.setResponseCode(ctx.getRoute().getMethod().equals(",
+                    string("DELETE"),
+                    ") ? io.jooby.StatusCode.NO_CONTENT: io.jooby.StatusCode.OK)",
+                    semicolon(false)));
+          }
+        }
+
+        buffer.add(
+            statement(
+                indent(controllerIndent),
+                "c.",
+                this.method.getSimpleName(),
+                paramList.toString(),
+                semicolon(kt)));
+
+        if (isTrpc) {
+          buffer.add(
+              statement(
+                  indent(controllerIndent),
+                  "return io.jooby.trpc.TrpcResponse.empty()",
+                  semicolon(kt)));
+        } else {
+          buffer.add(
+              statement(indent(controllerIndent), "return ctx.getResponseCode()", semicolon(kt)));
+        }
+      } else if (returnType.is("io.jooby.StatusCode")) {
+        buffer.add(
+            statement(
+                indent(controllerIndent),
+                kt ? "val" : "var",
+                " statusCode = c.",
+                this.method.getSimpleName(),
+                paramList.toString(),
+                semicolon(kt)));
+        buffer.add(
+            statement(indent(controllerIndent), "ctx.setResponseCode(statusCode)", semicolon(kt)));
+
+        if (isTrpc) {
+          buffer.add(
+              statement(
+                  indent(controllerIndent),
+                  "return io.jooby.trpc.TrpcResponse.of(statusCode)",
+                  semicolon(kt)));
+        } else {
+          buffer.add(statement(indent(controllerIndent), "return statusCode", semicolon(kt)));
+        }
+      } else {
+        var castStr =
+            customReturnType.isProjection()
+                ? ""
+                : customReturnType.getArgumentsString(kt, false, Set.of(TypeKind.TYPEVAR));
+
+        var needsCast =
+            !castStr.isEmpty()
+                || (kt
+                    && !customReturnType.isProjection()
+                    && !customReturnType.getArguments().isEmpty());
+
+        var kotlinNotEnoughTypeInformation = !castStr.isEmpty() && kt ? "<Any>" : "";
+        var call =
+            of(
+                "c.",
+                this.method.getSimpleName(),
+                kotlinNotEnoughTypeInformation,
+                paramList.toString());
+
+        if (needsCast) {
+          setUncheckedCast(true);
+          call = kt ? call + " as " + returnTypeString : "(" + returnTypeString + ") " + call;
+        }
+
+        if (customReturnType.isProjection()) {
+          var projected =
+              of(Types.PROJECTED, ".wrap(", call, ").include(", string(getProjection()), ")");
+          if (isTrpc) {
+            buffer.add(
+                statement(
+                    indent(controllerIndent),
+                    "return io.jooby.trpc.TrpcResponse.of(",
+                    projected,
+                    ")",
+                    semicolon(kt)));
+          } else {
+            buffer.add(
+                statement(
+                    indent(controllerIndent),
+                    "return ",
+                    projected,
+                    kt && nullable ? "!!" : "",
+                    semicolon(kt)));
+          }
+        } else {
+
+          if (isTrpc && reactive != null) {
+            if (isReactiveVoid) {
+              // Ensure empty void streams systematically resolve into an empty TrpcResponse
+              var handler = reactive.handlerType();
+              if (handler.contains("Reactor")) {
+                buffer.add(
+                    statement(
+                        indent(controllerIndent),
+                        "return ",
+                        call,
+                        ".then(reactor.core.publisher.Mono.just(io.jooby.trpc.TrpcResponse.empty()))",
+                        semicolon(kt)));
+              } else if (handler.contains("Mutiny")) {
+                buffer.add(
+                    statement(
+                        indent(controllerIndent),
+                        "return ",
+                        call,
+                        ".replaceWith(io.jooby.trpc.TrpcResponse.empty())",
+                        semicolon(kt)));
+              } else if (handler.contains("ReactiveSupport")) {
+                buffer.add(
+                    statement(
+                        indent(controllerIndent),
+                        "return ",
+                        call,
+                        ".thenApply(x -> io.jooby.trpc.TrpcResponse.empty())",
+                        semicolon(kt)));
+              } else if (handler.contains("Reactivex")) {
+                buffer.add(
+                    statement(
+                        indent(controllerIndent),
+                        "return ",
+                        call,
+                        ".toSingleDefault(io.jooby.trpc.TrpcResponse.empty())",
+                        semicolon(kt)));
+              } else {
+                buffer.add(
+                    statement(
+                        indent(controllerIndent),
+                        "return ",
+                        call,
+                        ".map(x -> io.jooby.trpc.TrpcResponse.empty())",
+                        semicolon(kt)));
+              }
+            } else {
+              buffer.add(
+                  statement(
+                      indent(controllerIndent),
+                      "return ",
+                      call,
+                      reactive.mapOperator(),
+                      semicolon(kt)));
+            }
+          } else if (isTrpc) {
+            buffer.add(
+                statement(
+                    indent(controllerIndent),
+                    "return io.jooby.trpc.TrpcResponse.of(",
+                    call,
+                    kt && nullable ? "!!" : "",
+                    ")",
+                    semicolon(kt)));
+          } else {
+            buffer.add(
+                statement(
+                    indent(controllerIndent),
+                    "return ",
+                    call,
+                    kt && nullable ? "!!" : "",
+                    semicolon(kt)));
+          }
+        }
+      }
+
+      if (isTrpc && !parameters.isEmpty()) {
+        buffer.add(statement(indent(2), "}"));
+      }
+
+      buffer.add(statement("}", System.lineSeparator()));
+
+      if (uncheckedCast) {
+        if (kt) {
+          buffer.addFirst(statement("@Suppress(\"UNCHECKED_CAST\")"));
+        } else {
+          buffer.addFirst(statement("@SuppressWarnings(\"unchecked\")"));
+        }
+      }
+    }
+    return buffer;
+  }
+
+  private boolean methodCallHeader(
+      boolean kt,
+      String contextVarname,
+      String methodName,
+      ArrayList<String> buffer,
+      String returnTypeGenerics,
+      String returnTypeString,
+      boolean throwsException) {
+    var nullable = false;
     if (kt) {
       nullable =
           method.getAnnotationMirrors().stream()
@@ -272,18 +657,20 @@ public class MvcRoute {
                 "suspend ",
                 "fun ",
                 returnTypeGenerics,
-                getGeneratedName(),
+                methodName,
                 "(handler: io.jooby.kt.HandlerContext): ",
                 returnTypeString,
                 " {"));
-        buffer.add(statement(indent(2), "val ctx = handler.ctx"));
+        buffer.add(statement(indent(2), "val ", contextVarname, " = handler.ctx"));
       } else {
         buffer.add(
             statement(
                 "fun ",
                 returnTypeGenerics,
-                getGeneratedName(),
-                "(ctx: io.jooby.Context): ",
+                methodName,
+                "(",
+                contextVarname,
+                ": io.jooby.Context): ",
                 returnTypeString,
                 " {"));
       }
@@ -294,104 +681,276 @@ public class MvcRoute {
               returnTypeGenerics,
               returnTypeString,
               " ",
-              getGeneratedName(),
-              "(io.jooby.Context ctx) ",
+              methodName,
+              "(io.jooby.Context ",
+              contextVarname,
+              ") ",
               throwsException ? "throws Exception {" : "{"));
     }
-    if (returnType.isVoid()) {
-      String statusCode;
-      if (annotationMap.size() == 1) {
-        statusCode =
-            annotationMap.keySet().iterator().next().getSimpleName().toString().equals("DELETE")
-                ? "NO_CONTENT"
-                : "OK";
-      } else {
-        statusCode = null;
-      }
-      if (statusCode != null) {
-        buffer.add(
-            statement(
-                indent(2),
-                "ctx.setResponseCode(io.jooby.StatusCode.",
-                statusCode,
-                ")",
-                semicolon(kt)));
-      } else {
-        if (kt) {
-          buffer.add(
-              statement(
-                  indent(2),
-                  "ctx.setResponseCode(if (ctx.getRoute().getMethod().equals(",
-                  string("DELETE"),
-                  ")) io.jooby.StatusCode.NO_CONTENT else io.jooby.StatusCode.OK)"));
-        } else {
-          buffer.add(
-              statement(
-                  indent(2),
-                  "ctx.setResponseCode(ctx.getRoute().getMethod().equals(",
-                  string("DELETE"),
-                  ") ? io.jooby.StatusCode.NO_CONTENT: io.jooby.StatusCode.OK)",
-                  semicolon(false)));
-        }
-      }
-      controllerVar(kt, buffer);
-      buffer.add(
-          statement(
-              indent(2), "c.", this.method.getSimpleName(), paramList.toString(), semicolon(kt)));
-      buffer.add(statement(indent(2), "return ctx.getResponseCode()", semicolon(kt)));
-    } else if (returnType.is("io.jooby.StatusCode")) {
-      controllerVar(kt, buffer);
-      buffer.add(
-          statement(
-              indent(2),
-              kt ? "val" : "var",
-              " statusCode = c.",
-              this.method.getSimpleName(),
-              paramList.toString(),
-              semicolon(kt)));
-      buffer.add(statement(indent(2), "ctx.setResponseCode(statusCode)", semicolon(kt)));
-      buffer.add(statement(indent(2), "return statusCode", semicolon(kt)));
-    } else {
-      controllerVar(kt, buffer);
-      var cast =
-          customReturnType.isProjection()
-              ? ""
-              : customReturnType.getArgumentsString(kt, false, Set.of(TypeKind.TYPEVAR));
-      var kotlinNotEnoughTypeInformation = !cast.isEmpty() && kt ? "<Any>" : "";
-      var call =
-          of(
-              "c.",
-              this.method.getSimpleName(),
-              kotlinNotEnoughTypeInformation,
-              paramList.toString());
-      if (!cast.isEmpty()) {
-        setUncheckedCast(true);
-        call = kt ? call + " as " + returnTypeString : "(" + returnTypeString + ") " + call;
-      }
-      if (customReturnType.isProjection()) {
-        var projected =
-            of(Types.PROJECTED, ".wrap(", call, ").include(", string(getProjection()), ")");
-        buffer.add(
-            statement(indent(2), "return ", projected, kt && nullable ? "!!" : "", semicolon(kt)));
-      } else {
-        buffer.add(
-            statement(indent(2), "return ", call, kt && nullable ? "!!" : "", semicolon(kt)));
+    return nullable;
+  }
+
+  private List<String> generateTrpcParameter(boolean kt, Consumer<String> arguments) {
+    var statements = new ArrayList<String>();
+    for (var parameter : parameters) {
+      var paramenterName = parameter.getName();
+      var type = type(kt, parameter.getType().toString());
+      boolean isNullable = parameter.isNullable(kt);
+
+      switch (parameter.getType().getRawType().toString()) {
+        case "io.jooby.Context":
+          arguments.accept("ctx");
+          break;
+        case "int",
+        "long",
+        "double",
+        "boolean",
+        "java.lang.String",
+        "java.lang.Integer",
+        "java.lang.Long",
+        "java.lang.Double",
+        "java.lang.Boolean":
+          var simpleType = type.startsWith("java.lang.") ? type.substring(10) : type;
+          if (simpleType.equals("Integer") || simpleType.equals("int")) simpleType = "Int";
+          var readName =
+              "next" + Character.toUpperCase(simpleType.charAt(0)) + simpleType.substring(1);
+
+          if (isNullable) {
+            if (kt) {
+              statements.add(
+                  statement(
+                      indent(4),
+                      "val ",
+                      paramenterName,
+                      " = if (reader.nextIsNull(",
+                      string(paramenterName),
+                      ")) null else reader.",
+                      readName,
+                      "(",
+                      string(paramenterName),
+                      ")"));
+            } else {
+              statements.add(
+                  statement(
+                      indent(4),
+                      var(kt),
+                      paramenterName,
+                      " = reader.nextIsNull(",
+                      string(paramenterName),
+                      ") ? null : reader.",
+                      readName,
+                      "(",
+                      string(paramenterName),
+                      ")",
+                      semicolon(kt)));
+            }
+          } else {
+            statements.add(
+                statement(
+                    indent(4),
+                    var(kt),
+                    paramenterName,
+                    " = reader.",
+                    readName,
+                    "(",
+                    string(paramenterName),
+                    ")",
+                    semicolon(kt)));
+          }
+          arguments.accept(paramenterName);
+          break;
+        case "byte",
+        "short",
+        "float",
+        "char",
+        "java.lang.Byte",
+        "java.lang.Short",
+        "java.lang.Float",
+        "java.lang.Character":
+          var isChar = type.equals("char") || type.equals("java.lang.Character");
+          var isFloat = type.equals("float") || type.equals("java.lang.Float");
+          var readMethod = isFloat ? "nextDouble" : (isChar ? "nextString" : "nextInt");
+
+          if (isNullable) {
+            if (kt) {
+              var ktCast =
+                  isChar
+                      ? "?.get(0)"
+                      : "?.to"
+                          + Character.toUpperCase(type.replace("java.lang.", "").charAt(0))
+                          + type.replace("java.lang.", "").substring(1)
+                          + "()";
+              statements.add(
+                  statement(
+                      indent(4),
+                      "val ",
+                      paramenterName,
+                      " = if (reader.nextIsNull(",
+                      string(paramenterName),
+                      ")) null else reader.",
+                      readMethod,
+                      "(",
+                      string(paramenterName),
+                      ")",
+                      ktCast));
+            } else {
+              var targetType = type.replace("java.lang.", "");
+              var javaPrefix = isChar ? "" : "(" + targetType + ") ";
+              var javaSuffix = isChar ? ".charAt(0)" : "";
+              statements.add(
+                  statement(
+                      indent(4),
+                      var(kt),
+                      paramenterName,
+                      " = reader.nextIsNull(",
+                      string(paramenterName),
+                      ") ? null : ",
+                      javaPrefix,
+                      "reader.",
+                      readMethod,
+                      "(",
+                      string(paramenterName),
+                      ")",
+                      javaSuffix,
+                      semicolon(kt)));
+            }
+          } else {
+            if (kt) {
+              var ktCast =
+                  isChar
+                      ? "[0]"
+                      : ".to"
+                          + Character.toUpperCase(type.replace("java.lang.", "").charAt(0))
+                          + type.replace("java.lang.", "").substring(1)
+                          + "()";
+              statements.add(
+                  statement(
+                      indent(4),
+                      var(kt),
+                      paramenterName,
+                      " = reader.",
+                      readMethod,
+                      "(",
+                      string(paramenterName),
+                      ")",
+                      ktCast,
+                      semicolon(kt)));
+            } else {
+              var targetType = type.replace("java.lang.", "");
+              var javaPrefix = isChar ? "" : "(" + targetType + ") ";
+              var javaSuffix = isChar ? ".charAt(0)" : "";
+              statements.add(
+                  statement(
+                      indent(4),
+                      var(kt),
+                      paramenterName,
+                      " = ",
+                      javaPrefix,
+                      "reader.",
+                      readMethod,
+                      "(",
+                      string(paramenterName),
+                      ")",
+                      javaSuffix,
+                      semicolon(kt)));
+            }
+          }
+          arguments.accept(paramenterName);
+          break;
+        default:
+          if (kt) {
+            statements.add(
+                statement(
+                    indent(4),
+                    "val ",
+                    paramenterName,
+                    "Decoder: io.jooby.trpc.TrpcDecoder<",
+                    type,
+                    "> = parser.decoder(",
+                    parameter.getType().toSourceCode(kt),
+                    ")",
+                    semicolon(kt)));
+            if (isNullable) {
+              statements.add(
+                  statement(
+                      indent(4),
+                      "val ",
+                      paramenterName,
+                      " = if (reader.nextIsNull(",
+                      string(paramenterName),
+                      ")) null else reader.nextObject(",
+                      string(paramenterName),
+                      ", ",
+                      paramenterName,
+                      "Decoder)"));
+            } else {
+              statements.add(
+                  statement(
+                      indent(4),
+                      "val ",
+                      paramenterName,
+                      " = reader.nextObject(",
+                      string(paramenterName),
+                      ", ",
+                      paramenterName,
+                      "Decoder)",
+                      semicolon(kt)));
+            }
+          } else {
+            statements.add(
+                statement(
+                    indent(4),
+                    "io.jooby.trpc.TrpcDecoder<",
+                    type,
+                    "> ",
+                    paramenterName,
+                    "Decoder = parser.decoder(",
+                    parameter.getType().toSourceCode(kt),
+                    ")",
+                    semicolon(kt)));
+            if (isNullable) {
+              statements.add(
+                  statement(
+                      indent(4),
+                      parameter.getType().toString(),
+                      " ",
+                      paramenterName,
+                      " = reader.nextIsNull(",
+                      string(paramenterName),
+                      ") ? null : reader.nextObject(",
+                      string(paramenterName),
+                      ", ",
+                      paramenterName,
+                      "Decoder)",
+                      semicolon(kt)));
+            } else {
+              statements.add(
+                  statement(
+                      indent(4),
+                      parameter.getType().toString(),
+                      " ",
+                      paramenterName,
+                      " = reader.nextObject(",
+                      string(paramenterName),
+                      ", ",
+                      paramenterName,
+                      "Decoder)",
+                      semicolon(kt)));
+            }
+          }
+          arguments.accept(paramenterName);
+          break;
       }
     }
-    buffer.add(statement("}", System.lineSeparator()));
-    if (uncheckedCast) {
-      if (kt) {
-        buffer.add(0, statement("@Suppress(\"UNCHECKED_CAST\")"));
-      } else {
-        buffer.add(0, statement("@SuppressWarnings(\"unchecked\")"));
-      }
-    }
-    return buffer;
+    return statements;
   }
 
   private void controllerVar(boolean kt, List<String> buffer) {
-    buffer.add(
-        statement(indent(2), kt ? "val" : "var", " c = this.factory.apply(ctx)", semicolon(kt)));
+    controllerVar(kt, buffer, 2);
+  }
+
+  private void controllerVar(boolean kt, List<String> buffer, int indent) {
+    buffer.add(statement(indent(indent), var(kt), "c = this.factory.apply(ctx)", semicolon(kt)));
   }
 
   public String getGeneratedName() {
@@ -407,6 +966,12 @@ public class MvcRoute {
         ofNullable(findAnnotationByName(this.method, annotation.getQualifiedName().toString()))
             .orElseThrow(() -> new IllegalArgumentException("Annotation not found: " + annotation));
     annotationMap.put(annotation, annotationMirror);
+
+    // Eagerly flag as tRPC so equals/hashCode can differentiate hybrid methods early
+    if (HttpMethod.findByAnnotationName(annotation.getQualifiedName().toString())
+        == HttpMethod.tRPC) {
+      this.isTrpc = true;
+    }
     return this;
   }
 
@@ -438,7 +1003,6 @@ public class MvcRoute {
         .map(
             it -> {
               var type = it.getType();
-              // Kotlin requires his own types for primitives
               if (kt && type.isPrimitive()) {
                 return type(kt, type.getRawType().toString());
               }
@@ -454,13 +1018,13 @@ public class MvcRoute {
 
   @Override
   public int hashCode() {
-    return method.toString().hashCode();
+    return Objects.hash(method.toString(), isTrpc);
   }
 
   @Override
   public boolean equals(Object obj) {
     if (obj instanceof MvcRoute that) {
-      return this.method.toString().equals(that.method.toString());
+      return this.method.toString().equals(that.method.toString()) && this.isTrpc == that.isTrpc;
     }
     return false;
   }
@@ -513,11 +1077,6 @@ public class MvcRoute {
             .collect(Collectors.joining(", ", "java.util.List.of(", ")")));
   }
 
-  /**
-   * Kotlin suspend function has a <code>kotlin.coroutines.Continuation</code> as last parameter.
-   *
-   * @return True for Kotlin suspend function.
-   */
   public boolean isSuspendFun() {
     return suspendFun;
   }
@@ -543,5 +1102,67 @@ public class MvcRoute {
 
   public boolean hasBeanValidation() {
     return hasBeanValidation;
+  }
+
+  private HttpMethod trpcMethod(Element element) {
+    // 1. High Precedence: Explicit tRPC procedure annotations
+    if (AnnotationSupport.findAnnotationByName(element, "io.jooby.annotation.Trpc.Query") != null) {
+      return HttpMethod.GET;
+    }
+    if (AnnotationSupport.findAnnotationByName(element, "io.jooby.annotation.Trpc.Mutation")
+        != null) {
+      return HttpMethod.POST;
+    }
+
+    // 2. Base Precedence: @Trpc combined with standard HTTP annotations
+    var trpc = AnnotationSupport.findAnnotationByName(element, "io.jooby.annotation.Trpc");
+    if (trpc != null) {
+      if (HttpMethod.GET.matches(element)) {
+        return HttpMethod.GET;
+      }
+
+      // Map all state-changing HTTP annotations to a tRPC POST mutation
+      if (HttpMethod.POST.matches(element)
+          || HttpMethod.PUT.matches(element)
+          || HttpMethod.PATCH.matches(element)
+          || HttpMethod.DELETE.matches(element)) {
+        return HttpMethod.POST;
+      }
+
+      // 3. Fallback: Missing HTTP Method -> Compilation Error
+      throw new IllegalArgumentException(
+          "tRPC procedure missing HTTP mapping. Method "
+              + element.getSimpleName()
+              + "() in "
+              + element.getEnclosingElement().getSimpleName()
+              + " is annotated with @Trpc but lacks a valid HTTP method annotation. Please annotate"
+              + " the method with @Trpc.Query, @Trpc.Mutation, or combine @Trpc with @GET, @POST,"
+              + " @PUT, @PATCH, or @DELETE.");
+    }
+    return null;
+  }
+
+  public String trpcPath(Element element) {
+    var namespace =
+        Optional.ofNullable(
+                AnnotationSupport.findAnnotationByName(
+                    element.getEnclosingElement(), "io.jooby.annotation.Trpc"))
+            .flatMap(it -> findAnnotationValue(it, VALUE).stream().findFirst())
+            .map(it -> it + ".")
+            .orElse("");
+
+    var procedure =
+        Stream.of(
+                "io.jooby.annotation.Trpc.Query",
+                "io.jooby.annotation.Trpc.Mutation",
+                "io.jooby.annotation.Trpc")
+            .map(it -> AnnotationSupport.findAnnotationByName(element, it))
+            .filter(Objects::nonNull)
+            .findFirst()
+            .flatMap(it -> findAnnotationValue(it, VALUE).stream().findFirst())
+            .orElse(element.getSimpleName().toString());
+    return Stream.of("trpc", namespace + procedure)
+        .map(segment -> segment.startsWith("/") ? segment.substring(1) : segment)
+        .collect(Collectors.joining("/", "/", ""));
   }
 }
